# fde_sql_mcp

./: .gitignore  README.md  fde_sql_mcp.config.template.json  pyproject.toml  requirements.txt
.dev-docs/features/: FEATURE_LOG.md
.dev-docs/features/enhance-sql-server-mcp/: STATUS.json
.dev-docs/features/enhance-sql-server-mcp/history/: 2026-02-01T20-26-54Z--final.md
src/fde_sql_mcp/: config.py  server.py
src/fde_sql_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fde_sql_mcp/__pycache__/: __init__.cpython-313.pyc.2573273491440
src/fde_sql_mcp/clients/: sql.py
src/fde_sql_mcp/tools/: databases.py
src/fde_sql_mcp/tools/__pycache__/: databases.cpython-313.pyc.1606317049776
tmp/: connect_ping.py
